# eie

CPP_compile_test/cloud_viewer/: CMakeCache.txt  Makefile  cloud_viewer.cpp  cmake_install.cmake
CPP_compile_test/eigen/: CMakeCache.txt  Makefile  cmake_install.cmake
CPP_compile_test/opencv/: CMakeCache.txt  CMakeLists.txt  Makefile  canny.cpp  cmake_install.cmake
ICV_system/lab1/: CMakeLists.txt  zhitonglvbo.cpp  头文件.txt
ICV_system/lab1/commonData/: Chair.pcd
ICV_system/lab1/lab1-1/: CMakeLists.txt  头文件.txt
ICV_system/lab1/lab1-1/commonData/: Block.pcd  Cactus.pcd  Dino.pcd  Elephant.pcd  Horse.pcd  Skull.pcd  bunny.pcd  gargo50K.pcd  hippo.pcd  line.pcd
ICV_system/lab1/lab1-3/: CMakeLists.txt
ICV_system/lab1/lab1-3/ransac_data/: line.pcd  sphere.pcd
ICV_system/lab2/: CmakeLists.txt
ICV_system/lab2/devel/: .catkin
ICV_system/lab2_melodic_on_car/devel/: .rosinstall
ICV_system/lab3/: CMakeLists.txt  Ransac.cpp  lineRansac.cpp
ICV_system/lab3/ransac_data/: line.pcd
ICV_system/lab4/devel/: .catkin  .rosinstall  local_setup.sh
ID_basic_algorithm/lab2/: README.md  pyproject.toml
ID_basic_algorithm/lab2/coco128/labels/: train2017.cache
ID_basic_algorithm/lab2/yolov5-5.0/: .gitignore  requirements.txt  train.py
ID_basic_algorithm/lab2/yolov5-5.0/data/: coco128.yaml
ID_basic_algorithm/lab2/yolov5-5.0/models/: common.py  yolo.py
ID_basic_algorithm/lab2/yolov5-5.0/runs/train/exp/: events.out.tfevents.1698812951.oseasy.27725.0  opt.yaml  results.txt
ID_basic_algorithm/lab2/yolov5-5.0/runs/train/exp2/: events.out.tfevents.1698816288.oseasy.34887.0  opt.yaml  results.txt
ID_basic_algorithm/lab2/yolov5-5.0/runs/train/exp3/: events.out.tfevents.1698816736.oseasy.40386.0  opt.yaml  results.txt
ID_basic_algorithm/lab2/yolov5-5.0/utils/: datasets.py  general.py  loss.py
SNA_SCC/devel/: local_setup.sh
SNA_SCC/lab1/: .gitignore  rsa_key.pem
SNA_SCC/lab2/: father.pem  root.key  root.pem  son.pem
SNA_SCC/lab3/: A.key  A.pub  A.sign  B.key  B.pub  B.sign  C.key  C.pub  C.sign
SNA_SCC/lab4/: root.key  root.pem
SNA_SCC/lab5/: 123.otp_key
SNA_SCC/lab6/: diff.patch  host.py  root.key  root.pem
docker/: install-ros-noetic-in-distrobox.sh  install-ros-noetic-in-docker.sh
lab3_melodic_on_car_realTime/devel/: .catkin  local_setup.sh
soft/CPP_compile_test/cloud_viewer/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
soft/soft1/: distribute.cpp  stuList
soft/soft2/: CMakeLists.txt  distribute.h  main.cpp
soft/soft3/: CMakeLists.txt  Observer.h  carSave  distribute.cpp
soft1/: CMakeLists.txt  SmartCarList  distribute.h
soft2/: distribute.cpp
soft3/: CMakeLists.txt  Subject.h  distribute.h  main.cpp
(+297 files in other folders)
